# segy-stack

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
python/: CMakeLists.txt  py_segystack.cc  test_Grid.py  test_StackFile.py
src/: config.h.in  crs_util.cc  crs_util.h  float_util.cc  float_util.h  logging.h  mmap_file.cc  mmap_file.h  segy_file.cc  segy_file.h  stack_file.cc  stack_file.h  stack_types.proto  statistics.h
src/test/: test_base.cc  test_base.h
tests/: CMakeLists.txt  float_util_tests.cc  mmap_file_tests.cc  segy_file_tests.cc  stack_file_tests.cc
util/: CMakeLists.txt  convert.cc
